--- a/prep-javascript-dom-manipulation/index.html
+++ b/prep-javascript-dom-manipulation/index.html
@@ -21,7 +21,14 @@
     </p>
   </div>
   <script>
-    // Your code here
+    var $secondParagraph = document.querySelector('.second-paragraph');
+    console.log($secondParagraph);
+
+    $secondParagraph.textContent = 'I also really like to watch television and eat pancakes!';
+
+    var $thirdParagraph = document.querySelector('.third-paragraph');
+
+    $thirdParagraph.textContent = 'I hope one day to meet people who also like coding, television, and pancakes.';
   </script>
 </body>
 </html>
