--- a/prep-javascript-dom-events/index.html
+++ b/prep-javascript-dom-events/index.html
@@ -6,7 +6,17 @@
 <body>
   <button class="hello-world-btn">Hello World!</button>
   <script>
-    // Your code here
+    document.addEventListener('DOMContentLoaded', function () {
+      console.log('content loaded!');
+    });
+    window.addEventListener('mousemove', function () {
+      console.log('The mouse is moving!');
+    });
+
+    var $helloWorld = document.querySelector('.hello-world-btn');
+    $helloWorld.addEventListener('click', function () {
+      console.log('Hello World');
+    });
   </script>
 </body>
 </html>
