prep-javascript-dom-creation -Jonah Park

--- a/prep-javascript-dom-creation/index.html
+++ b/prep-javascript-dom-creation/index.html
@@ -8,7 +8,12 @@
 
   </div>
   <script>
-    // Your code here
+    var $container = document.querySelector('#container');
+    console.log($container);
+    var $heading = document.createElement('h1');
+    console.log($heading);
+    $heading.textContent = 'Hello World!';
+    $container.appendChild($heading);
   </script>
 </body>
 </html>
